--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
       You need to enable JavaScript to run this app.
     </noscript>
     <div id="root"></div>
-    <div style="position: absolute; bottom: 0; right: 0;">© Rasmus Eskola Consulting</div>
+    <!--div style="position: absolute; bottom: 0; right: 0;">© Rasmus Eskola Consulting</div-->
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
